kubernetes/apps/media/jellyfin/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - jellyfin.blackcats.cc
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
